<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidTrialOfORM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_question">Create Question</string>
	<string name="view_question">View Question</string>
	<string name="get_single_record_by_id">Get single record by id</string>
	<string name="get_single_record_by_string">Get single record by string</string>
	<string name="enter_id_hint">Enter the id of the question</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="add">Add</string>
	<string name="question_type_hint">Enter in the question type here (Either 1 or 2)</string>
	<string name="question_text_hint">Enter in the question text here</string>
	<string name="delete_all">Delete all</string>
</resources>
