<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <EditText 
        android:id="@+id/editQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/question_text_hint"/>
    <EditText 
        android:id="@+id/editQuestionType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:layout_below="@+id/editQuestion"
        android:hint="@string/question_type_hint" />
    <RelativeLayout 
	    android:id="@+id/relButtons"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center_horizontal"
	    android:layout_below="@+id/editQuestionType"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="10dp">
	    <Button 
	        android:id="@+id/btnCancel"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:onClick="buttonClicked"
	        android:text="@string/cancel"/>
	    <Button 
	        android:id="@+id/btnAdd"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_toRightOf="@+id/btnCancel"
	        android:onClick="buttonClicked"
	        android:text="@string/add"/>
	</RelativeLayout>
</RelativeLayout>
