<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/btnCreateQuestion"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:onClick="buttonClicked"
            android:text="@string/create_question" />

        <Button
            android:id="@+id/btnViewQuestion"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btnCreateQuestion"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClicked"
            android:text="@string/view_question" />

        <Button
            android:id="@+id/btnGetSingleRecordById"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btnViewQuestion"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClicked"
            android:text="@string/get_single_record_by_id" />
        
        <Button
            android:id="@+id/btnGetSingleRecordByString"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btnGetSingleRecordById"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClicked"
            android:text="@string/get_single_record_by_string" />
        
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btnGetSingleRecordByString"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClicked"
            android:text="@string/delete_all" />

        <TextView
            android:id="@+id/txtViewQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDelete"
            android:text="" />
    </RelativeLayout>
</ScrollView>