<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_margin="10dp">
    <EditText 
        android:id="@+id/editId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id_hint"
        android:layout_marginTop="10dp"
        android:inputType="number"/>
	<RelativeLayout 
	    android:id="@+id/relButtons"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center_horizontal"
	    android:layout_below="@+id/editId"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="10dp">
	    <Button 
	        android:id="@+id/btnCancel"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"/>
	    <Button 
	        android:id="@+id/btnOK"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_toRightOf="@+id/btnCancel"
	        android:text="@string/ok"/>
	</RelativeLayout>
</RelativeLayout>
